static/main.css
body {
  background: #000000;
  color: #faf3e0;
  margin-top: 5rem;
}

.bg-steel {
  background-color: #2F4F4F;
}

.site-header .navbar-nav .nav-link {
  color: #cbd5db;
}

.site-header .navbar-nav .nav-link:hover {
  color: #7d9775;
}

.site-header .navbar-nav .nav-link.active {
  font-weight: 500;
}

.content-section {
  background: #ffffff;
  padding: 10px 20px;
  border: 1px solid #dddddd;
  border-radius: 3px;
  margin-bottom: 20px;
  color: #1E2D2F
}

.article-title {
  color: #dddddd;
}

.gallery-page {
  font-family: 'Comic Sans MS', cursive, sans-serif;
  background-color: #223c35;
  color: #f1ffe7
}

.polaroid {
  background-color: white;
  padding: 10px 10px 20px 10px;
  border: 1px solid #e0e0e0;
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
  transition: transform 0.3s ease;
  text-align: center;
  display: inline-block;
  border-radius: 4px;
}

.polaroid:hover {
  transform: scale(1.05);
}

.polaroid img {
  width: 100%;
  height: auto;
  display: block;
}

.caption {
  margin-top: 10px;
  color: #555;
  font-style: italic;
  font-size: 0.95rem;
}

.hero-box {
  background-color: #2F4F4F;
  border: 2px dashed #cbd5db;
  color: #faf3e0;
}

button:hover {
  background-color: #7d9775;
  color: #faf3e0;
}

